# Uarm_Demo

./: .gitignore  .gitmodules  Description_Stand_Köln.tex  Description_Stand_Köln_eng.tex  README.md  frames_2026-03-08_08.36.53.gv  frames_2026-03-08_09.19.05.gv  frames_2026-03-08_09.21.39.gv  save_image.py
Example BAG FIles/: BTT2.bag  bmt_bag.csv  csv_to_bag.py  generate_bags.py  test_03.bag  test_03.csv
Example BAG FIles/test_03_bag2/: metadata.yaml  test_03_bag2_0.db3
docker/: Dockerfile  Dockerfile.operator  docker-compose.yml  entrypoint.sh  operator-compose.yml  trigger.sh
install/: setup.sh
install/apriltag_launcher/share/apriltag_launcher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/apriltag_launcher/share/apriltag_launcher/cmake/: apriltag_launcherConfig-version.cmake  apriltag_launcherConfig.cmake
install/apriltag_launcher/share/apriltag_launcher/config/: tags_36h11.yaml
install/apriltag_launcher/share/apriltag_launcher/environment/: ament_prefix_path.dsv  (+1 more)
install/apriltag_ros/lib/apriltag_ros/: apriltag_node
install/apriltag_ros/share/apriltag_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/swiftpro/lib/swiftpro/: swiftpro_read_node  swiftpro_rviz_node  swiftpro_write_node
install/swiftpro/share/swiftpro/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uarm_apriltag_demo/lib/uarm_apriltag_demo/: action_demo_node  demo_node  tag_overlay_node
install/uarm_apriltag_demo/share/uarm_apriltag_demo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/uarm_interfaces/share/uarm_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/apriltag_launcher/: CMakeLists.txt
src/apriltag_launcher/config/: tags_36h11.yaml
src/apriltag_launcher/launch/: apriltag_usb_cam.launch.py
src/uarm_apriltag_demo/: package.xml  setup.cfg  setup.py
src/uarm_apriltag_demo/config/: demo_config.yaml
src/uarm_apriltag_demo/launch/: action_demo.launch.py  demo.launch.py
src/uarm_apriltag_demo/rviz/: demo.rviz
src/uarm_apriltag_demo/uarm_apriltag_demo/: action_demo_node.py  demo_node.py  tag_overlay_node.py
src/uarm_arm_controller/: CMakeLists.txt  package.xml
src/uarm_arm_controller/config/: poses.yaml
src/uarm_arm_controller/launch/: arm_controller.launch.py
src/uarm_arm_controller/src/: arm_controller_node.cpp  teach_position.py
src/uarm_brain/: package.xml  setup.cfg  setup.py
src/uarm_brain/config/: brain_config.yaml  object_tags.yaml
src/uarm_brain/launch/: brain.launch.py  brain_standalone.launch.py  operator_monitoring.launch.py
src/uarm_brain/resource/: uarm_brain
src/uarm_brain/rviz/: operator.rviz
src/uarm_brain/test/: dry_run_test.py
src/uarm_brain/uarm_brain/: bag_reader.py  task_manager_node.py  task_planner_node.py
src/uarm_driver/: README.md
src/uarm_driver/swiftpro/: CMakeLists.txt
src/uarm_driver/swiftpro/include/swiftpro/: serial_port.hpp
src/uarm_driver/swiftpro/launch/: pro_control.launch.py
src/uarm_driver/swiftpro/src/: swiftpro_moveit_node.cpp  swiftpro_read_node.cpp  swiftpro_rviz_node.cpp  swiftpro_write_node.cpp
src/uarm_driver/swiftpro/srv/: SendGcode.srv
src/uarm_driver/swiftpro/urdf/: pro_model.xacro  swift_model.urdf
src/uarm_interfaces/: CMakeLists.txt
src/uarm_interfaces/action/: DriveToPose.action  LoadBag.action  PickAndPlace.action  PickPlace.action
(+200 files in other folders)
